# llm-bridge

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  rust-toolchain.toml
gllmbridge/: README.md  gleam.toml  manifest.toml
gllmbridge/src/: app.gleam  gllmbridge.gleam
gllmbridge/src/app/: router.gleam
gllmbridge/test/: app_test.gleam
src/: ai_service.rs  main.rs  models.rs
test/: requirements.txt  test.py  test_client.py  test_script.py
