[package]
name = "llm-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3.31"
futures-util = "0.3"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.23.1" }
uuid = {version = "1.13.1", features = ["v4"]}
dotenvy = "0.15.7"

[patch.crates-io]
